Added FakeSensor project

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 StreamAnalysisWebApp/node_modules/
 StreamAnalysisWebApp/.vscode/
+FakeSensor/FakeSensor/FakeSensor/obj/
+FakeSensor/FakeSensor/.vs/
