--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ StreamAnalysisWebApp/node_modules/
 StreamAnalysisWebApp/.vscode/
 FakeSensor/FakeSensor/FakeSensor/obj/
 FakeSensor/FakeSensor/.vs/
+FakeSensor/FakeSensor/FakeSensor/bin/
