--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ StreamAnalysisWebApp/.vscode/
 FakeSensor/FakeSensor/FakeSensor/obj/
 FakeSensor/FakeSensor/.vs/
 FakeSensor/FakeSensor/FakeSensor/bin/
+APIXU/APIXU/bin/
+APIXU/APIXU/obj/Debug/APIXU.csproj.CoreCompileInputs.cache
+APIXU/APIXU/obj/
+StreamAnalysisLibrary/StreamAnalysisLibrary/obj/
+StreamAnalysisLibrary/StreamAnalysisLibrary/bin/
+APIXU/.vs/APIXU/v15/
+StreamAnalysisLibrary/.vs/StreamAnalysisLibrary/v15/
