--- a/StreamAnalysisLibrary/StreamAnalysisLibrary/packages.config
+++ b/StreamAnalysisLibrary/StreamAnalysisLibrary/packages.config
@@ -2,4 +2,8 @@
 <packages>
   <package id="Apache.NMS" version="1.7.1" targetFramework="net461" />
   <package id="Apache.NMS.ActiveMQ" version="1.7.2" targetFramework="net461" />
+  <package id="System.Reactive" version="4.1.2" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
