--- a/Applications/StreamAnalysisWebApp/StreamAnalysisWebApp/ClientApp/package.json
+++ b/Applications/StreamAnalysisWebApp/StreamAnalysisWebApp/ClientApp/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.1.1",
+    "@angular/animations": "^7.1.1",
     "@angular/common": "7.1.1",
     "@angular/compiler": "7.1.1",
     "@angular/core": "7.1.1",
@@ -25,12 +25,17 @@
     "@angular/router": "7.1.1",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
     "aspnet-prerendering": "^3.0.1",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "4.1.3",
+    "chart.js": "^2.7.3",
     "core-js": "^2.4.1",
+    "primeicons": "^1.0.0",
+    "primeng": "^7.0.0",
     "rxjs": "^6.3.3",
+    "tslib": "^1.9.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.11.0",
     "@angular/cli": "^7.1.0",
     "@angular/compiler-cli": "7.1.1",
     "@angular/language-service": "7.1.1",
