--- a/Applications/StreamAnalysisWebApp/StreamAnalysisWebApp/appsettings.json
+++ b/Applications/StreamAnalysisWebApp/StreamAnalysisWebApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Redis": "redis-cluster-001.redis-cluster.qca0xp.euc1.cache.amazonaws.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
