--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ Applications/APIXU/APIXU/bin/
 Applications/DotNetEC2/DotNetEC2/bin/
 Applications/DotNetEC2/DotNetEC2/obj/
 Applications/StreamAnalysisWebApp/StreamAnalysisWebApp/AWS_Credentials.json
+Applications/WebApplication/.vs/WebApplication/v15/.suo
+Applications/WebApplication/.vs/WebApplication/v15/
