--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ Applications/DotNetEC2/DotNetEC2/obj/
 Applications/StreamAnalysisWebApp/StreamAnalysisWebApp/AWS_Credentials.json
 Applications/WebApplication/.vs/WebApplication/v15/.suo
 Applications/WebApplication/.vs/WebApplication/v15/
+Applications/WebApplication/WebApplication/aws_credentials.json
