committing latest updates

--- a/Applications/WebApplication/WebApplication/appsettings.json
+++ b/Applications/WebApplication/WebApplication/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Redis": "redis-cluster.qca0xp.0001.euc1.cache.amazonaws.com"
+    // "Redis": "redis.qca0xp.0001.euc1.cache.amazonaws.com"
+    "Redis":  "localhost"
   },
   "Logging": {
     "LogLevel": {
