--- a/Applications/APIXU/APIXU/Dockerfile
+++ b/Applications/APIXU/APIXU/Dockerfile
@@ -2,6 +2,7 @@ FROM microsoft/dotnet:2.2-sdk
 WORKDIR /app
 
 # copy csproj and restore as distinct layers
+COPY NuGet.Config ./
 COPY *.csproj ./
 RUN dotnet restore
 
