--- a/Applications/StreamAnalysisMQListener/StreamAnalysisMQListener/StreamAnalysisMQListener.csproj
+++ b/Applications/StreamAnalysisMQListener/StreamAnalysisMQListener/StreamAnalysisMQListener.csproj
@@ -9,6 +9,21 @@
     <PackageReference Include="Apache.NMS.ActiveMQ" Version="1.7.2">
       <NoWarn>NU1701</NoWarn>
     </PackageReference>
+    <PackageReference Include="AWSSDK.S3" Version="3.3.31.20" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
+    <PackageReference Include="System.Reactive" Version="4.1.3" />
+    <PackageReference Include="System.Reactive.Linq" Version="4.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="aws_credentials.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
