--- a/Applications/WebApplication/WebApplication/appsettings.json
+++ b/Applications/WebApplication/WebApplication/appsettings.json
@@ -1,7 +1,11 @@
 {
   "ConnectionStrings": {
-    // "Redis": "redis.qca0xp.0001.euc1.cache.amazonaws.com"
-    "Redis":  "localhost"
+  },
+  "SNSTopics": {
+    "ChannelTopic": {
+      "Name": "stream-analysis-notification",
+      "Arn": "arn:aws:sns:eu-central-1:526110916966:stream-analysis-notification"
+    }
   },
   "Logging": {
     "LogLevel": {
