--- a/Applications/WebApplication/WebApplication/WebApplication.csproj
+++ b/Applications/WebApplication/WebApplication/WebApplication.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.3.3.25" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.AspNetCore.WebSockets" Version="2.2.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="2.2.10" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.2" />
