--- a/Applications/WebApplication/WebApplication/ClientApp/angular.json
+++ b/Applications/WebApplication/WebApplication/ClientApp/angular.json
@@ -25,6 +25,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/primeflex/primeflex.css",
               "node_modules/primeicons/primeicons.css",
+              "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeng/resources/themes/nova-dark/theme.css"
             ],
