--- a/Applications/WebApplication/WebApplication/ClientApp/package.json
+++ b/Applications/WebApplication/WebApplication/ClientApp/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "4.1.3",
     "chart.js": "^2.7.3",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "ngx-clipboard": "^11.1.9",
     "primeflex": "^1.0.0-rc.1",
     "primeicons": "^1.0.0",
