--- a/Applications/WebApplication/WebApplication/appsettings.json
+++ b/Applications/WebApplication/WebApplication/appsettings.json
@@ -1,11 +1,19 @@
 {
   "ConnectionStrings": {
+    "ActiveMQ": "activemq:ssl://b-d517d345-559e-4c9c-b84a-8413f5aedbdd-1.mq.eu-central-1.amazonaws.com:61617?transport.acceptInvalidBrokerCert=true&wireFormat.maxInactivityDuration=0"
+  },
+  "ActiveMQ": {
+    "Username": "admin",
+    "Password": "adminPassword"
   },
   "SNSTopics": {
     "ChannelTopic": {
       "Name": "stream-analysis-notification",
       "Arn": "arn:aws:sns:eu-central-1:526110916966:stream-analysis-notification"
     }
+  },
+  "Buckets": {
+    "StreamAnalysisBucket": "stream.analysis.bucket"
   },
   "Logging": {
     "LogLevel": {
