advanced a lot in container management

--- a/Applications/WebApplication/WebApplication/appsettings.json
+++ b/Applications/WebApplication/WebApplication/appsettings.json
@@ -15,6 +15,12 @@
   "Buckets": {
     "StreamAnalysisBucket": "stream.analysis.bucket"
   },
+  "QueueFlushing": {
+    "IntervalInMinutes": "1"
+  },
+  "IamRoles": {
+    "EcsEventsRole": "ecsEventsRole"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
