--- a/Applications/WebApplication/WebApplication/WebApplication.csproj
+++ b/Applications/WebApplication/WebApplication/WebApplication.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.17.12" />
     <PackageReference Include="AWSSDK.ECR" Version="3.3.5.9" />
     <PackageReference Include="AWSSDK.ECS" Version="3.3.24" />
+    <PackageReference Include="AWSSDK.IdentityManagement" Version="3.3.101.8" />
     <PackageReference Include="AWSSDK.S3" Version="3.3.31.22" />
     <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.3.3.25" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
