--- a/Applications/WebApplication/WebApplication/ClientApp/angular.json
+++ b/Applications/WebApplication/WebApplication/ClientApp/angular.json
@@ -29,9 +29,7 @@
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeng/resources/themes/nova-dark/theme.css"
             ],
-            "scripts": [
-              "node_modules/chart.js/dist/Chart.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
