--- a/Applications/WebApplication/WebApplication/ClientApp/package.json
+++ b/Applications/WebApplication/WebApplication/ClientApp/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts4": "^4.4.6",
     "@angular/animations": "^7.1.1",
     "@angular/common": "7.1.1",
     "@angular/compiler": "7.1.1",
@@ -27,7 +28,6 @@
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "4.1.3",
-    "chart.js": "^2.8.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "ngx-clipboard": "^11.1.9",
