--- a/Applications/WebApplication/WebApplication/ClientApp/angular.json
+++ b/Applications/WebApplication/WebApplication/ClientApp/angular.json
@@ -81,9 +81,11 @@
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/primeflex/primeflex.css",
               "node_modules/primeicons/primeicons.css",
+              "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeng/resources/themes/darkness/theme.css"
+              "node_modules/primeng/resources/themes/nova-dark/theme.css"
             ],
             "assets": [
               "src/assets"
